Regression: iOS 13.1 MediaStreamTrack.enabled = false kills audio track https://bugs.webkit.org/show_bug.cgi?id=202405 <rdar://problem/55922616>

Reviewed by Eric Carlson.

Source/WebCore:

When the web page is setting enabled to false, media session might change from PlayRecord to None.
This might trigger CoreAudio to no longer output audio samples, thus triggering our audio capture failure timer.
This would end the track after 2 seconds.
Given audio tracks can be reenabled by a web page, we should not change the Media Session setup based on that.
This patch updates MediaStream::mediaType to return independently of the enabled state.

Add internals API to write a cross platform test.

Test: fast/mediastream/audio-track-enabled.html
Manually tested as well.

* Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::mediaType const):
* platform/mediastream/MediaStreamPrivate.cpp:
(WebCore::MediaStreamPrivate::hasCaptureAudioSource const):
* testing/Internals.cpp:
(WebCore::Internals::supportsAudioSession const):
(WebCore::Internals::audioSessionCategory const):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/mediastream/audio-track-enabled-expected.txt: Added.
* fast/mediastream/audio-track-enabled.html: Added.


Canonical link: https://commits.webkit.org/216022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250663 268f45cc-cd09-0410-ab3c-d52691b4dbfc